--- a/src/main/resources/assets/lifeofnexus/lang/en_us.json
+++ b/src/main/resources/assets/lifeofnexus/lang/en_us.json
@@ -5,6 +5,8 @@
 	"item.lifeofnexus.scythonite_axe": "Scythonite Axe",
 	"item.lifeofnexus.scythonite_shovel": "Scythonite Shovel",
 	
+	"item.lifeofnexus.scythonite_helmet": "Scythonite Helmet",
+	
 	"block.lifeofnexus.scythonite_ore": "Scythonite Ore",
 	
 	"itemGroup.lifeofnexus": "LifeOfNexus!"
